Unity/Assets/akanevrc/TeuchiUdon/Tests/src/TopStatements/MutFunc.teuchi
// error
mut f = () -> 100;
